# habit

./: .gitignore  README.md  TODO  package.json  stk.txt
server/: Cargo.toml
server/migrations/2022-03-02-044226_users/: down.sql  up.sql
server/migrations/2022-03-02-044226_users/src/: schema.rs
server/src/: auth.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs  tile.rs  user.rs
server/static/: index.html
src/: App.tsx  Home.tsx  index.css  state.tsx  util.tsx
src/components/: Streak.tsx
src/pages/: Home.tsx  Streak.tsx
web/: .eslintrc.js  TODO  package.json
web/src/: App.tsx  api.tsx  bitset.tsx  state.tsx  streakbitset.tsx  util.tsx
web/src/components/: CompleteButton.tsx  Navbar.tsx  Tile.tsx
web/src/pages/: Home.tsx  Tile.tsx
