[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4"
actix-web = { version = "4", features = ["cookie"] }
serde = { version = "1.0.136", features = ["derive"] }
actix-files = "0.6.0"
nanoid = "0.4.0"
argon2 = "0.3.4"
thiserror = "1.0.30"